# vexfs

./: ARCHITECTURE.md  BRAIN.md  Cargo.toml  README.md  bench.sh  check_errors.txt  context.md  error.txt  fix_final.py  refactor.py  refactor_load.py  truth....txt  vexfs_gui.rs
.scratch/: analyze_braces.py
Files/: Cargo.toml  disk.rs  mod.rs  persist.rs
dashboard/: index.html
src/: lib.rs
src/ai/: engine.rs  entropy.rs  importance.rs  logger.rs  markov.rs  memory.rs  memory_persist.rs  mod.rs  neural.rs  persist.rs  search.rs
src/allocator/: mod.rs
src/cache/: mod.rs
src/fs/: btree.rs  buffer.rs  compress.rs  free_list.rs  journal.rs  mod.rs  snapshot.rs  snapshot_disk.rs
src/fuse/: mod.rs
tests/: integration.rs
