[package]
name = "vexfs"
version = "0.1.0"
edition = "2021"
description = "A next-generation AI-augmented filesystem"
license = "MIT"

[lib]
name = "vexfs"
path = "src/lib.rs"

[dependencies]
fuser = "0.14"
libc = "0.2"
zerocopy = { version = "0.7", features = ["derive"] }
blake3 = "1.5"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "cache_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1